--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@ text-align: justify;
 	font-size: 11px;
 	line-height:1.3;text-align:justify;
 }
+.enlace{
+color:#ffffff;font-size: 11px;
+}
 .titular{
 	color: #676767;	
 	font-size: 12px;
@@ -97,13 +100,17 @@ text-align: justify;
 <!-- INICIO QUE ES EL ASPA -->
 <div class="accordion-group">
   <div class="accordion-heading">
-    <a class="accordion-toggle"  href="http://www.aspa3.com" target="_blank">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
       III Cumbre ASPA 
     </a>
   </div>
-  <div style="height: 0px;" id="" class="accordion-body collapse">
+  <div style="height: 0px;" id="collapseOne" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-     
+     <div class="texto">La Cumbre América del Sur-Países Árabes (ASPA) es un foro de coordinación política entre los países de estas dos regiones, así como un mecanismo de cooperación en el ámbito de la economía, la cultura, la educación, la ciencia y la tecnología, la preservación del medio ambiente, el turismo y otros temas relevantes para el desarrollo sustentable de esos países y para contribuir a la paz mundial.<br />
+Esta asociación de naciones se sustenta en raíces comunes -que aún hoy se traslucen en aspectos culturales tales como el lenguaje y la gastronomía- así como en valores fundamentales y en una visión compartida del futuro de la Humanidad.<br />
+Este foro se encuentra conformado por los 22 países miembros de la Liga de Estados Árabes y los 12 países sudamericanos miembros de UNASUR.<br />
+<a class="btn btn-success enlace" href="http://www.aspa3.com" target="_blank">Ver pagina del ASPA</a>
+</div>
     <!-- CONTENIDO -->
     </div>
   </div>
@@ -113,93 +120,107 @@ text-align: justify;
 <div class="accordion-group">
   <div class="accordion-heading">
     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-      Programa 
+      Programa Empresarial
     </a>
   </div>
   <div style="height: 0px;" id="collapseTwo" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-<table class="table table-hover table-bordered table-striped">
-<caption><h3>Lunes 01 de Octubre, 2012 (Foro Empresarial)</h3></caption>
-<tbody class="texto"> 
-<tr> 
-	<th style="background-color:#ffffff;font-size:12px;">Horario</th><th style="background-color:#ffffff;font-size:12px;">Actividad</th>
-</tr>
-<tr>
-<td>9:00 – 9:45 a.m.</td><td><strong class="titular">Apertura del Evento</strong><br /><br />Su Excelencia, Ollanta Humala Tasso, Presidente de la República del Perú (7 a 10 minutos)
+	<table class="table table-hover table-bordered table-striped">
+		<caption><h3>01 de Octubre</h3></caption>
+	<tbody class="texto"> 
+	<tr> 
+		<th style="background-color:#ffffff;font-size:12px;">Horario</th>
+		<th style="background-color:#ffffff;font-size:12px;">Actividad</th>
+	</tr>
+	<tr>
+		<td>9:00 – 9:45 a.m.</td>
+		<td><strong class="titular">Apertura del Evento</strong><br /><br />Su Excelencia, Ollanta Humala Tasso, Presidente de la República del Perú (7 a 10 minutos)
 <br />Dr. Mohamed At-Twaijri, Secretario General Asistente para Asuntos Económicos de la Liga de Estados Árabes </td>
-</tr>
-<tr>
-<td>9:45 – 11:00 a.m.</td><td style="text-align: justify;"><strong class="titular">TENDIENDO PUENTES: ¿Cómo la infraestructura puede impulsar el crecimiento económico y la competitividad? ¿Mejorar la conectividad es la mejor manera de acortar las brechas?</strong><br />
+	</tr>
+	<tr>
+		<td>9:45 – 11:00 a.m.</td>
+		<td style="text-align: justify;"><strong class="titular">TENDIENDO PUENTES: ¿Cómo la infraestructura puede impulsar el crecimiento económico y la competitividad? ¿Mejorar la conectividad es la mejor manera de acortar las brechas?</strong><br />
 Orador principal: General Michel Sleiman, Presidente de la República de Líbano<br /> 
 <strong>Moderador: </strong><br />
 <strong>Panel: </strong>
-<ul>
-<li>Sr. Abdelkader Amara, Ministro de Industria, Comercio y Nuevas Tecnologías (Marruecos)</li>
-<li>H.E. Sultan Ahmed Bin Sulayem, Presidente de DP World (EAU)</li>
-<li>Sr. Sergio Cavagnaro Santa María, Gerente General de la Cámara Chilena de la Construcción (Chile) *</li></ul>
-</ul>
-</td>
-</tr>
-<tr>
-<td>11:00 – 11:30 a.m.</td><td style="text-align: justify;"><strong class="titular">Receso de café y Networking</strong></td>
-</tr>
-<tr>
-<td>11:30 – 12:45 p.m.</td><td style="text-align: justify;"><strong class="titular">SEGURIDAD ALIMENTARIA: ¿Cuales son los riesgos actuales para ambas regiones? ¿Puede Sudamérica convertirse en un abastecedor clave de alimentos? ¿Cuáles son las oportunidades de inversión? ¿Cuáles son los principales problemas en el comercio de alimentos entre Medio Oriente y  América Latina? ¿Cuál es el rol de la tecnología? ¿Qué efecto tiene la crisis financiera en la seguridad alimentaria?</strong><br />
+		<ul>
+			<li>Sr. Abdelkader Amara, Ministro de Industria, Comercio y Nuevas Tecnologías (Marruecos)</li>
+			<li>H.E. Sultan Ahmed Bin Sulayem, Presidente de DP World (EAU)</li>
+			<li>Sr. Sergio Cavagnaro Santa María, Gerente General de la Cámara Chilena de la Construcción (Chile) *</li></ul>
+		</ul>
+		</td>
+	</tr>
+	<tr>
+		<td>11:00 – 11:30 a.m.</td>
+		<td style="text-align: justify;"><strong class="titular">Receso de café y Networking</strong></td>
+	</tr>
+	<tr>
+		<td>11:30 – 12:45 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">SEGURIDAD ALIMENTARIA: ¿Cuales son los riesgos actuales para ambas regiones? ¿Puede Sudamérica convertirse en un abastecedor clave de alimentos? ¿Cuáles son las oportunidades de inversión? ¿Cuáles son los principales problemas en el comercio de alimentos entre Medio Oriente y  América Latina? ¿Cuál es el rol de la tecnología? ¿Qué efecto tiene la crisis financiera en la seguridad alimentaria?</strong><br />
 <strong>Oradora principal:</strong>Sra. Dilma Rousseff, Presidenta de la República Federativa del Brasil *<br />
 <strong>Moderador:</strong><br />
 <strong>Panel: </strong><br />
-<ul>
-<li>Nasser Mohamed Al-Hajri, Presidente de Hassad Food Company (Qatar)</li>
-<li>Rafael Mejía López, Presidente de la Sociedad de Agricultores de Colombia (Colombia) </li>
-<li>José Luis Silva Martinot, Ministro de Comercio Exterior y Turismo (Perú) *</li>
-</ul>
-</td>
-</tr>
-<tr>
-<td>12:45 – 2:30 p.m.</td><td style="text-align: justify;"><strong class="titular">Almuerzo en el Swissôtel</strong></td>
-</tr>
-<tr>
-<td>2:30 – 3:45 p.m.</td><td style="text-align: justify;"><strong class="titular">EL FUTURO DE LA ENERGÍA: ¿Será el acceso a la energía una traba para el crecimiento económico global? ¿Cómo se puede maximizar el uso de fuentes energéticas no renovables, protegiendo el ambiente y desarrollando nuevas tecnologías? </strong><br />
+		<ul>
+			<li>Nasser Mohamed Al-Hajri, Presidente de Hassad Food Company (Qatar)</li>
+			<li>Rafael Mejía López, Presidente de la Sociedad de Agricultores de Colombia (Colombia) </li>
+			<li>José Luis Silva Martinot, Ministro de Comercio Exterior y Turismo (Perú) *</li>
+		</ul>
+		</td>
+	</tr>
+	<tr>
+		<td>12:45 – 2:30 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">Almuerzo en el Swissôtel</strong></td>
+	</tr>
+	<tr>
+		<td>2:30 – 3:45 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">EL FUTURO DE LA ENERGÍA: ¿Será el acceso a la energía una traba para el crecimiento económico global? ¿Cómo se puede maximizar el uso de fuentes energéticas no renovables, protegiendo el ambiente y desarrollando nuevas tecnologías? </strong><br />
 <strong>Orador principal:</strong> Sr. Juan Manuel Santos, Presidente de Colombia *<br /> 
 <strong>Moderador:</strong><br />
 <strong>Panel: </strong><br />
-<ul>
-<li>Sr. Enrique M. Pescarmona, Presidente y CEO de IMPSA (Argentina)</li>
-<li>Sra. Maria das Graças Silva Foster,Presidenta de Petrobras (Brasil) *</li>
-<li>Mauro R. Hoyer, Director del Departamento de Información del Fondo de la OPEP para el Desarrollo Internacional (Arabia Saudita)</li>
-</ul> </td>
-</tr>
-<tr>
-<td>3:45 – 4:15 p.m.</td><td style="text-align: justify;"><strong class="titular">Receso de café y Networking</strong></td>
-</tr>
-<tr>
-<td>4:15 – 5:30 p.m.</td><td style="text-align: justify;"><strong class="titular">MÁS ALLÁ DE LOS RECURSOS NATURALES: ¿Es la disponibilidad de recursos naturales una limitación en el desarrollo de la innovación? ¿Cómo se pueden usar los recursos naturales para crear valor agregado? ¿Cómo cuidar el escaso recurso del agua? ¿Cómo afrontar el problema del cambio climático? </strong><br />
+		<ul>
+			<li>Sr. Enrique M. Pescarmona, Presidente y CEO de IMPSA (Argentina)</li>
+			<li>Sra. Maria das Graças Silva Foster,Presidenta de Petrobras (Brasil) *</li>
+			<li>Mauro R. Hoyer, Director del Departamento de Información del Fondo de la OPEP para el Desarrollo Internacional (Arabia Saudita)</li>
+		</ul> 
+		</td>
+	</tr>
+	<tr>
+		<td>3:45 – 4:15 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">Receso de café y Networking</strong></td>
+	</tr>
+	<tr>
+		<td>4:15 – 5:30 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">MÁS ALLÁ DE LOS RECURSOS NATURALES: ¿Es la disponibilidad de recursos naturales una limitación en el desarrollo de la innovación? ¿Cómo se pueden usar los recursos naturales para crear valor agregado? ¿Cómo cuidar el escaso recurso del agua? ¿Cómo afrontar el problema del cambio climático? </strong><br />
 <strong>Orador principal:</strong> Sheikh Hamad Bin Khalifa Al-Thani, Emir del Estado de Qatar <br />
 <strong>Moderador:</strong><br />
 <strong>Panel: </strong><br />
-<ul>
-<li>Issad Rebrab, CEO, CEVITAL (Argelia)</li>
-<li>Carlos Bulgheroni, Presidente de Bridas Argentina (Argentina)</li>
-</ul></td>
-</tr>
-<tr>
-<td>5:30 – 5:45 p.m.</td><td style="text-align: justify;"><strong class="titular">Sumario: ¿Qué oportunidades se encuentran en ambas regiones?
-</strong><br />
-Carlos Chiappori Samengo, Presidente de COMEXPERU</td>
-</tr>
-<tr>
-<td>5:45 – 6:00 p.m.</td><td style="text-align: justify;"><strong class="titular">Clausura del evento:</strong><br />
-Luis Miguel Castilla Rubio, Ministro de Economía y Finanzas del Perú</td>
-</tr>
-<tr>
-<td>7:00 p.m.</td><td style="text-align: justify;"><strong class="titular">Eventos sociales y culturales:</strong><br />
-Espectáculo en el Gran Teatro Nacional<br />				
-Pisco de Honor en el Gran Teatro Nacional</td>
-</tr>
+		<ul>
+			<li>Issad Rebrab, CEO, CEVITAL (Argelia)</li>
+			<li>Carlos Bulgheroni, Presidente de Bridas Argentina (Argentina)</li>
+		</ul>
+		</td>
+	</tr>
+	<tr>
+		<td>5:30 – 5:45 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">Sumario: ¿Qué oportunidades se encuentran en ambas regiones?
+		</strong><br />
+	Carlos Chiappori Samengo, Presidente de COMEXPERU</td>
+	</tr>
+	<tr>
+		<td>5:45 – 6:00 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">Clausura del evento:</strong><br />
+	Luis Miguel Castilla Rubio, Ministro de Economía y Finanzas del Perú</td>
+	</tr>
+	<tr>
+		<td>7:00 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">Eventos sociales y culturales:</strong><br />
+	Espectáculo en el Gran Teatro Nacional<br />				
+	Pisco de Honor en el Gran Teatro Nacional</td>
+	</tr>
 </tbody></table>
 
 <table class="table table-hover table-bordered table-striped">
-    <caption><h3>Martes 02 de Octubre, 2012 (Desayuno de Negocios - Proinversión)</h3></caption>
+    <caption><h3>02 de Octubre</h3></caption>
     <tbody class="texto"> 
         <tr> 
 	    <th style="background-color:#ffffff;font-size:12px;">Horario</th><th style="background-color:#ffffff;font-size:12px;">Actividad</th>
@@ -220,31 +241,37 @@ Luis Miguel Castilla Rubio, Ministro de Economía y Finanzas del Perú
 	    <td>9:15 – 9:45 a.m.</td>
 	    <td style="text-align: justify;"><strong class="titular">SOSTENIBILIDAD ENERGÉTICA: ¿De qué fuentes energéticas dispone el Perú?, ¿Cómo se vienen desarrollando?, ¿Puede el Perú convertirse en un exportador neto de energía?</strong><br />
 Jorge Merino Tafur, Ministro de Energía y Minas del Perú
-</td>
-</tr>
-<tr>
-<td>9:45 – 10:15 a.m.</td><td style="text-align: justify;"><strong class="titular">INFRAESTRUCTURA PARA LA INTEGRACIÓN: ¿Cómo se viene articulando la integración física del territorio peruano?, ¿Cómo participa la inversión privada en el desarrollo de infraestructura?, ¿Cuál es la estrategia a seguir para afianzar al Perú como hub del Pacífico Sudamericano?</strong><br />
-Carlos Paredes Rodríguez, Ministro de Transportes y Comunicaciones del Perú *</td>
-</tr>
-<tr>
-<td>10:15 – 10:45 a.m.</td><td style="text-align: justify;"><strong class="titular">DESARROLLO URBANO: ¿Cuál es el déficit de infraestructura urbana?, ¿Cuál es la perspectiva de crecimiento urbano para los siguientes años?, ¿Qué programas impulsa el Estado y cuál es la participación del sector privado?</strong><br />
-René Cornejo Díaz, Ministro de Vivienda, Construcción y Saneamiento 
-</td>
-</tr>
-<tr>
-<td>10:45 – 11:15 a.m.</td><td style="text-align: justify;"><strong class="titular">AGRICULTURA DE ALTO VALOR: ¿En qué aspectos se basa la competitividad del Perú como productor de alimentos?, ¿Qué proyectos refuerzan la competitividad del país en la actividad agrícola?, ¿Cuáles son las oportunidades de inversión?</strong><br />
-Milton Von Hesse La Serna, Ministro de Agricultura del Perú</td>
-</tr>
-<tr>
-<td>11:15 – 11:30 a.m.</td><td style="text-align: justify;"><strong class="titular">Palabras de clausura </strong><br />
-Javier Illescas, Director Ejecutivo de la Agencia de Promoción de la Inversión Privada - Proinversión</td>
-</tr>
-<tr>
-<td>11:30 – 1:00 p.m.</td><td style="text-align: justify;"><strong class="titular">Networking</strong></td>
-</tr>
-<tr>
-<td>3:30 – 6:00 p.m.</td><td style="text-align: justify;"><strong class="titular">City tour</strong></td>
-</tr>
+	    </td>
+	</tr>
+	<tr>
+		<td>9:45 – 10:15 a.m.</td>
+		<td style="text-align: justify;"><strong class="titular">INFRAESTRUCTURA PARA LA INTEGRACIÓN: ¿Cómo se viene articulando la integración física del territorio peruano?, ¿Cómo participa la inversión privada en el desarrollo de infraestructura?, ¿Cuál es la estrategia a seguir para afianzar al Perú como hub del Pacífico Sudamericano?</strong><br />
+	Carlos Paredes Rodríguez, Ministro de Transportes y Comunicaciones del Perú *</td>
+	</tr>
+	<tr>
+		<td>10:15 – 10:45 a.m.</td>
+		<td style="text-align: justify;"><strong class="titular">DESARROLLO URBANO: ¿Cuál es el déficit de infraestructura urbana?, ¿Cuál es la perspectiva de crecimiento urbano para los siguientes años?, ¿Qué programas impulsa el Estado y cuál es la participación del sector privado?</strong><br />
+	René Cornejo Díaz, Ministro de Vivienda, Construcción y Saneamiento 
+		</td>
+	</tr>
+	<tr>
+		<td>10:45 – 11:15 a.m.</td>
+		<td style="text-align: justify;"><strong class="titular">AGRICULTURA DE ALTO VALOR: ¿En qué aspectos se basa la competitividad del Perú como productor de alimentos?, ¿Qué proyectos refuerzan la competitividad del país en la actividad agrícola?, ¿Cuáles son las oportunidades de inversión?</strong><br />
+	Milton Von Hesse La Serna, Ministro de Agricultura del Perú</td>
+	</tr>
+	<tr>
+		<td>11:15 – 11:30 a.m.</td>
+		<td style="text-align: justify;"><strong class="titular">Palabras de clausura </strong><br />
+	Javier Illescas, Director Ejecutivo de la Agencia de Promoción de la Inversión Privada - Proinversión</td>
+	</tr>
+	<tr>
+		<td>11:30 – 1:00 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">Networking</strong></td>
+	</tr>
+	<tr>
+		<td>3:30 – 6:00 p.m.</td>
+		<td style="text-align: justify;"><strong class="titular">City tour</strong></td>
+	</tr>
 </tbody></table>
 <!-- CONTENIDO -->
     </div>
@@ -315,7 +342,7 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
   </div>
   <div style="height: 0px;" id="info-peru2" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-     <p><h1>AQUI EL CONTENIDO</h1><br /> 
+     <p></p> 
     <!-- CONTENIDO -->
     </div>
   </div>
@@ -410,39 +437,32 @@ Ministro Jorge Salas<br />
 Dir. de la Oficina General de Comunicación<br />
 <a href="mailto:jsalasr@rree.gob.pe">jsalasr@rree.gob.pe</a>
 <br />  
-<p>
+</p><p>
 Hugo Contreras<br />
 Sub Dir Prensa y Difusión Ofic Gral Comunicaciones<br />
 <a href="mailto:hcontreras@rree.gob.pe"> hcontreras@rree.gob.pe>hcontreras@rree.gob.pe</a>
-<br /> 
+</p><br /> 
 <p>
 Cielo Cano Gallardo<br />
 Dirección de Promoción de Inversiones<br />
 <a href="mailto:ccano@rree.gob.pe">ccano@rree.gob.pe</a>
 <br /> 
-<p>
+</p><p>
 <a href="www.comexperu.org.pe" target="_blank">COMEX</a><br />
 Ricardo Paredes Castro<br />
 Gte. de Estudios Económicos y Consultoría Empresarial<br />
 <a href="mailto:rparedes@comexperu.org.pe">rparedes@comexperu.org.pe</a>
 <br /> 
-<p>
+</p><p>
 <a href="www.proinversion.gob.pe" target="_blank">ProInversión</a><br />
 Milagros Rasmussen Albitres<br />
 Comunicaciones e Imagen Institucional<br />
 <a href="mailto:mrasmussen@proinversion.gob.pe">mrasmussen@proinversion.gob.pe</a>
-<br /> 
-<p> 
-<a href="http://www.pcm.gob.pe/EstructuraOrg/ogcs.html" target="_blank">Oficina General de Comunicación Social PCM</a><br />
-Elvis Mori Macedo<br />
-Redes Sociales<br />
-<a href="mailto:elvismori@gmail.com">elvismori@gmail.com</a>
-<br /> 
-<p>
+</p><p>
 Patricia Escudero Ascencio<br />
 Prensa y Comunicaciones<br />
 <a href="mailto:pescudero@presidencia.gob.pe">pescudero@presidencia.gob.pe</a>
-<br /> 
+<br /> </p>
 <!-- CONTENIDO -->
     </div>
   </div>
