--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
   </div>
 </div>
 <!-- FIN QUE ES EL ASPA -->
-<!-- INICIO QUE ES EL ASPA -->
+<!-- INICIO QUE ES EL ASPA 
 <div class="accordion-group">
   <div class="accordion-heading">
     <a class="accordion-toggle"  data-toggle="collapse" data-parent="#accordion-info-peru" href="#info-peru2">
@@ -341,13 +341,13 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
     </a>
   </div>
   <div style="height: 0px;" id="info-peru2" class="accordion-body collapse">
-    <div class="accordion-inner"><!-- CONTENIDO -->
+    <div class="accordion-inner">
      <p></p> 
-    <!-- CONTENIDO -->
+  
     </div>
   </div>
 </div>
-<!-- FIN QUE ES EL ASPA -->
+FIN QUE ES EL ASPA -->
 <!-- INICIO QUE ES EL ASPA -->
 <div class="accordion-group">
   <div class="accordion-heading">
