--- a/index.html
+++ b/index.html
@@ -125,8 +125,18 @@ Este foro se encuentra conformado por los 22 países miembros de la Liga de Esta
   </div>
   <div style="height: 0px;" id="collapseTwo" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
+
+<div class="accordion" id="programas">
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#programas" href="#programa1">
+      01 de Octubre
+    </a>
+  </div>
+  <div style="height: 0px;" id="programa1" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
 	<table class="table table-hover table-bordered table-striped">
-		<caption><h3>01 de Octubre</h3></caption>
 	<tbody class="texto"> 
 	<tr> 
 		<th style="background-color:#ffffff;font-size:12px;">Horario</th>
@@ -146,7 +156,7 @@ Orador principal: General Michel Sleiman, Presidente de la República de Líbano
 		<ul>
 			<li>Sr. Abdelkader Amara, Ministro de Industria, Comercio y Nuevas Tecnologías (Marruecos)</li>
 			<li>H.E. Sultan Ahmed Bin Sulayem, Presidente de DP World (EAU)</li>
-			<li>Sr. Sergio Cavagnaro Santa María, Gerente General de la Cámara Chilena de la Construcción (Chile) *</li></ul>
+			<li>Sr. Sergio Cavagnaro Santa María, Gerente General de la Cámara Chilena de la Construcción (Chile) *</li>
 		</ul>
 		</td>
 	</tr>
@@ -217,10 +227,17 @@ Orador principal: General Michel Sleiman, Presidente de la República de Líbano
 	Espectáculo en el Gran Teatro Nacional<br />				
 	Pisco de Honor en el Gran Teatro Nacional</td>
 	</tr>
-</tbody></table>
+</tbody></table></div></div></div>
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#programas" href="#programa2">
+      02 de Octubre
+    </a>
+  </div>
+  <div style="height: 0px;" id="programa2" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
 
 <table class="table table-hover table-bordered table-striped">
-    <caption><h3>02 de Octubre</h3></caption>
     <tbody class="texto"> 
         <tr> 
 	    <th style="background-color:#ffffff;font-size:12px;">Horario</th><th style="background-color:#ffffff;font-size:12px;">Actividad</th>
@@ -272,7 +289,8 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
 		<td>3:30 – 6:00 p.m.</td>
 		<td style="text-align: justify;"><strong class="titular">City tour</strong></td>
 	</tr>
-</tbody></table>
+</tbody></table></div></div>
+</div></div>
 <!-- CONTENIDO -->
     </div>
   </div>
