--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ color:#ffffff;font-size: 11px;
      <div class="texto">La Cumbre América del Sur-Países Árabes (ASPA) es un foro de coordinación política entre los países de estas dos regiones, así como un mecanismo de cooperación en el ámbito de la economía, la cultura, la educación, la ciencia y la tecnología, la preservación del medio ambiente, el turismo y otros temas relevantes para el desarrollo sustentable de esos países y para contribuir a la paz mundial.<br />
 Esta asociación de naciones se sustenta en raíces comunes -que aún hoy se traslucen en aspectos culturales tales como el lenguaje y la gastronomía- así como en valores fundamentales y en una visión compartida del futuro de la Humanidad.<br />
 Este foro se encuentra conformado por los 22 países miembros de la Liga de Estados Árabes y los 12 países sudamericanos miembros de UNASUR.<br />
-<a class="btn btn-success enlace" href="http://www.aspa3.com" target="_blank">Ver pagina del ASPA</a>
+<a class="btn btn-inverse enlace" href="http://www.aspa3.com" target="_blank">Ver pagina del ASPA</a>
 </div>
     <!-- CONTENIDO -->
     </div>
@@ -59,8 +59,157 @@ Este foro se encuentra conformado por los 22 países miembros de la Liga de Esta
 <!-- INICIO CALENDARIO DE ACTIVIDADES -->
 <div class="accordion-group">
   <div class="accordion-heading">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#programa-presidencial">
+      Programa Cumbre Presidencial
+    </a>
+  </div>
+  <div style="height: 0px;" id="programa-presidencial" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+
+<div class="accordion" id="programa-presidencia">
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#programa-presidencia" href="#programa-presidencia1">
+      30 de Setiembre
+    </a>
+  </div>
+  <div style="height: 0px;" id="programa-presidencia1" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+	<table class="table table-hover table-bordered table-striped">
+	<tbody class="texto"> 
+	<tr> 
+		<th style="background-color:#ffffff;font-size:12px;">Horario</th>
+		<th style="background-color:#ffffff;font-size:12px;">Actividad</th>
+	</tr>
+	<tr>
+		<td>11:00 h. a 13:30 h.</td>
+		<td><strong class="titular">Primera Sesión del Consejo de Altos Oficiales ASPA.</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+	<tr>
+		<td>15:30 h. a 19:00 h.</td>
+		<td><strong class="titular">Segunda Sesión del Consejo de Altos Oficiales ASPA.</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+</tbody></table></div></div></div>
+
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#programa-presidencia" href="#programa-presidencia2">
+      01 de Octubre
+    </a>
+  </div>
+  <div style="height: 0px;" id="programa-presidencia2" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+	<table class="table table-hover table-bordered table-striped">
+	<tbody class="texto"> 
+	<tr> 
+		<th style="background-color:#ffffff;font-size:12px;">Horario</th>
+		<th style="background-color:#ffffff;font-size:12px;">Actividad</th>
+	</tr> 
+	<tr>
+		<td>8:50 h.</td>
+		<td><strong class="titular">Saludo del Ministro de Relaciones Exteriores del Perú a los Ministros
+        de Relaciones Exteriores ASPA.</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+	<tr>
+		<td>9:40 h. a 12:30 h.</td>
+		<td><strong class="titular">Inauguración y Primera Sesión de la Reunión del Consejo de Ministros de Relaciones Exteriores ASPA.</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+	<tr>
+		<td>12:30 h.</td>
+		<td><strong class="titular">Foto de grupo.</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+	<tr>
+		<td>15:30 h. a 18:30 h.</td>
+		<td><strong class="titular">Segunda Sesión de la Reunión del Consejo de Ministros de Relaciones Exteriores ASPA.</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+	<tr>
+		<td>19:00 h. a 20:00 h.</td>
+		<td><strong class="titular">Actividad cultural en el Gran Teatro Nacional.</strong><br /><br />
+		</td>
+	</tr>
+</tbody></table></div></div></div>
+
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#programa-presidencia" href="#programa-presidencia3">
+      02 de Octubre
+    </a>
+  </div>
+  <div style="height: 0px;" id="programa-presidencia3" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+	<table class="table table-hover table-bordered table-striped">
+	<tbody class="texto"> 
+	<tr> 
+		<th style="background-color:#ffffff;font-size:12px;">Horario</th>
+		<th style="background-color:#ffffff;font-size:12px;">Actividad</th>
+	</tr>
+	<tr>
+		<td>8:00 h.</td>
+		<td><strong class="titular">Saludo del señor Presidente de la República del Perú a los Jefes de Estado y de Gobierno ASPA.</strong><br /><br />
+		Lugar: Gran Teatro Nacional
+		</td>
+	</tr>
+	<tr>
+		<td>8:45 h.</td>
+		<td><strong class="titular">Inauguración de la III Cumbre América del Sur – Países Árabes (ASPA)</strong><br /><br />
+		Lugar: Gran Teatro Nacional
+		</td>
+	</tr>
+	<tr>
+		<td>10:00 h. a 13:00 h.</td>
+		<td><strong class="titular">Primera Sesión Plenaria de Jefes de Estado y de Gobierno ASPA</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+	<tr>
+		<td>13:00 h.</td>
+		<td><strong class="titular">Foto de grupo</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+	<tr>
+		<td>15:00 hrs.</td>
+		<td><strong class="titular">Segunda Sesión Plenaria y Clausura de la III Cumbre América del Sur – Países Árabes (ASPA)</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+	<tr>
+		<td>17:00 h</td>
+		<td><strong class="titular">Adopción de la Declaración de Lima<br />
+		Presentación del Informe del Representante del CEO Summit<br  />
+		Discurso del señor Presidente de la República del Perú. <br />
+		Conferencia de prensa</strong><br /><br />
+		Lugar: Ministerio de Cultura
+		</td>
+	</tr>
+</tbody></table></div></div></div>
+
+</div>
+<!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN CALENDARIO DE ACTIVIDADES -->
+
+
+<!-- INICIO CALENDARIO DE ACTIVIDADES -->
+<div class="accordion-group">
+  <div class="accordion-heading">
     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-      Programa Empresarial
+      Programa Cumbre Empresarial
     </a>
   </div>
   <div style="height: 0px;" id="collapseTwo" class="accordion-body collapse">
